@@ -77,6 +77,7 @@ class TestQtArgs:
     ])
     def test_qt_args(self, monkeypatch, config_stub, args, expected, parser):
         """Test commandline with no Qt arguments given."""
+        expected.append("--touch-events=disabled")  # passed unconditionally
         parsed = parser.parse_args(args)
         assert qtargs.qt_args(parsed) == expected
 
